// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an event view component with all props 1`] = `
<div
  className="cca-event-view"
>
  <div
    className="ui container"
  >
    <div
      className="ui twelve column grid"
    >
      <div
        className="row"
      >
        <div
          className="nine wide computer twelve wide mobile twelve wide tablet column col-left"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Hello World!</p>",
              }
            }
          />
          <h2>
            Agenda and supporting documents
          </h2>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="ui segment"
          >
            <h5>
              A background document for the event is available
               
            </h5>
            <div
              className="ui list documents-list"
              role="list"
            >
              <div
                className="item"
                onClick={[Function]}
                role="listitem"
              >
                <a
                  className="document-list-item"
                >
                  <i
                    className="file alternate icon"
                  />
                  <span />
                </a>
              </div>
            </div>
          </div>
          <h2>
            Practical information
          </h2>
          <h3>
            Participation
          </h3>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <h2>
            Contact
          </h2>
          <p>
            If you have any further questions you can contact
             
            <a
              href="mailto:test@example.com"
            >
              test@example.com
            </a>
          </p>
        </div>
        <div
          className="three wide computer twelve wide mobile twelve wide tablet column col-right"
        >
          <div
            className="ui segment"
          >
            <h4>
              When
            </h4>
            <p
              className="event-when"
            >
              <span
                className="start"
              >
                <span
                  className="start-date"
                >
                  Jun 23, 2019
                </span>
                <span>
                   
                </span>
                <span
                  className="start-time"
                >
                  3:20 PM
                </span>
              </span>
               to 
              <span
                className="end"
              >
                <span
                  className="end-date"
                >
                  Jun 24, 2019
                </span>
                <span>
                   
                </span>
                <span
                  className="end-time"
                >
                  3:20 PM
                </span>
              </span>
            </p>
            <h4>
              Where
            </h4>
            <p>
              Volto, Plone
            </p>
            <h4>
              Info
            </h4>
            <p>
              test@example.com
            </p>
            <h4>
              Web
            </h4>
            <p>
              <a
                href="https://www.example.com"
                rel="noopener"
                target="_blank"
              >
                Visit external website
              </a>
            </p>
            <div
              className="download-event"
            >
              <a
                className="ics-download"
                href="http://localhost:8080/Plone/++api++/my-page/ics_view"
                rel="noreferrer"
                target="_blank"
              >
                <button
                  className="ui button icon inverted primary labeled"
                  onClick={[Function]}
                  title="Download this event in iCal format"
                >
                  <i
                    aria-hidden="true"
                    className="calendar alternate outline icon"
                    onClick={[Function]}
                  />
                  Download Event
                </button>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an event view component with only required props 1`] = `
<div
  className="cca-event-view"
>
  <div
    className="ui container"
  >
    <div
      className="ui twelve column grid"
    >
      <div
        className="row"
      >
        <div
          className="nine wide computer twelve wide mobile twelve wide tablet column col-left"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <h2>
            Agenda and supporting documents
          </h2>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="ui segment"
          >
            <h5>
              A background document for the event is available
               
            </h5>
            <div
              className="ui list documents-list"
              role="list"
            >
              <div
                className="item"
                onClick={[Function]}
                role="listitem"
              >
                <a
                  className="document-list-item"
                >
                  <i
                    className="file alternate icon"
                  />
                  <span />
                </a>
              </div>
            </div>
          </div>
          <h2>
            Practical information
          </h2>
          <h3>
            Participation
          </h3>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <h2>
            Contact
          </h2>
        </div>
        <div
          className="three wide computer twelve wide mobile twelve wide tablet column col-right"
        >
          <div
            className="ui segment"
          >
            <h4>
              When
            </h4>
            <p
              className="event-when same-day"
            >
              <span
                className="start-date"
              >
                Jun 23, 2019
              </span>
               from 
              <span
                className="start-time"
              >
                3:20 PM
              </span>
               to 
              <span
                className="end-time"
              >
                4:20 PM
              </span>
            </p>
            <h4>
              Where
            </h4>
            <p />
            <div
              className="download-event"
            >
              <a
                className="ics-download"
                href="http://localhost:8080/Plone/++api++/my-page/ics_view"
                rel="noreferrer"
                target="_blank"
              >
                <button
                  className="ui button icon inverted primary labeled"
                  onClick={[Function]}
                  title="Download this event in iCal format"
                >
                  <i
                    aria-hidden="true"
                    className="calendar alternate outline icon"
                    onClick={[Function]}
                  />
                  Download Event
                </button>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an event view component without links to api in the text 1`] = `
<div
  className="cca-event-view"
>
  <div
    className="ui container"
  >
    <div
      className="ui twelve column grid"
    >
      <div
        className="row"
      >
        <div
          className="nine wide computer twelve wide mobile twelve wide tablet column col-left"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Hello World!</p><p>This is an <a href=\\"http://localhost:8080/Plone/foo/bar\\">internal link</a> and a <a href=\\"http://localhost:8080/Plone/foo/baz\\">second link</a></p>",
              }
            }
          />
          <h2>
            Agenda and supporting documents
          </h2>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="ui segment"
          >
            <h5>
              A background document for the event is available
               
            </h5>
            <div
              className="ui list documents-list"
              role="list"
            >
              <div
                className="item"
                onClick={[Function]}
                role="listitem"
              >
                <a
                  className="document-list-item"
                >
                  <i
                    className="file alternate icon"
                  />
                  <span />
                </a>
              </div>
            </div>
          </div>
          <h2>
            Practical information
          </h2>
          <h3>
            Participation
          </h3>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <h2>
            Contact
          </h2>
        </div>
        <div
          className="three wide computer twelve wide mobile twelve wide tablet column col-right"
        >
          <div
            className="ui segment"
          >
            <h4>
              When
            </h4>
            <p
              className="event-when same-day"
            >
              <span
                className="start-date"
              >
                Jun 23, 2019
              </span>
               from 
              <span
                className="start-time"
              >
                3:20 PM
              </span>
               to 
              <span
                className="end-time"
              >
                4:20 PM
              </span>
            </p>
            <h4>
              Where
            </h4>
            <p />
            <div
              className="download-event"
            >
              <a
                className="ics-download"
                href="http://localhost:8080/Plone/++api++/my-page/ics_view"
                rel="noreferrer"
                target="_blank"
              >
                <button
                  className="ui button icon inverted primary labeled"
                  onClick={[Function]}
                  title="Download this event in iCal format"
                >
                  <i
                    aria-hidden="true"
                    className="calendar alternate outline icon"
                    onClick={[Function]}
                  />
                  Download Event
                </button>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
